--- a/web/_includes/layouts/base.njk
+++ b/web/_includes/layouts/base.njk
@@ -16,11 +16,11 @@
   <body>
     <header>
       <h1 class="home"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
-      <ul class="nav">
+      <!--<ul class="nav">
         {%- for nav in collections.nav | reverse -%}
         <li class="nav-item{% if nav.url == page.url %} nav-item-active{% endif %}"><a href="{{ nav.url | url }}">{{ nav.data.navtitle }}</a></li>
         {%- endfor -%}
-      </ul>
+      </ul>-->
     </header>
 
     <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
