--- a/web/archive.njk
+++ b/web/archive.njk
@@ -1,10 +1,10 @@
 ---
 layout: layouts/home.njk
 navtitle: Archive
-permalink: /posts/
+permalink: /questions/
 ---
 
 <h1>Archive</h1>
 
-{% set postslist = collections.myPosts %}
-{% include "postslist.njk" %}
+{% set questionslist = collections.questions %}
+{% include "questionslist.njk" %}
