--- a/web/index.njk
+++ b/web/index.njk
@@ -5,9 +5,9 @@ tags:
 navtitle: Home
 ---
 
-<h1>Latest Posts</h1>
+<h1>Latest Questions</h1>
 
-{% set postslist = collections.myPosts %}
-{% include "postslist.njk" %}
+{% set questionslist = collections.questions %}
+{% include "questionslist.njk" %}
 
-<p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>
+<p>More questions can be found in <a href="{{ '/questions/' | url }}">the archive</a>.</p>
