--- a/web/_includes/style.css
+++ b/web/_includes/style.css
@@ -1,139 +1,182 @@
-/* Tufte-ish CSS styles */
+* + * {
+  margin-top: 0.75em;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
-    font-size: 15px;
+  --primary-color: #8258f9;
+  font-size: 15px;
 }
 
 body {
-    width: 87.5%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12.5%;
-    font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-    background-color: #fffff8;
-    color: #111;
-    max-width: 1400px;
-    counter-reset: sidenote-counter;
-}
-
-h1 {
-    font-weight: 400;
-    margin-top: 4rem;
-    margin-bottom: 1.5rem;
-    font-size: 3.2rem;
-    line-height: 1;
-}
-
-h1.home {
-  font-size: 2.1rem;
-}
-
-h2 {
-    font-style: italic;
-    font-weight: 400;
-    margin-top: 2.1rem;
-    margin-bottom: 1.4rem;
-    font-size: 2.2rem;
-    line-height: 1;
-}
-
-h3 {
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.7rem;
-    margin-top: 2rem;
-    margin-bottom: 1.4rem;
-    line-height: 1;
-}
-
-article {
-    padding: 5rem 0rem;
+  width: 87.5%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 12.5%;
+  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+  color: #111;
+  max-width: 1400px;
+  counter-reset: sidenote-counter;
 }
 
 section {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 p,
 ol,
 ul {
-    font-size: 1.4rem;
-    line-height: 2rem;
+  font-size: 1.4rem;
+  line-height: 2rem;
 }
 
 p {
-    margin-top: 1.4rem;
-    margin-bottom: 1.4rem;
-    padding-right: 0;
-    vertical-align: baseline;
-    max-width: 700px;
+  margin-top: 1.4rem;
+  margin-bottom: 1.4rem;
+  padding-right: 0;
+  vertical-align: baseline;
+  max-width: 700px;
 }
 
 blockquote {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 blockquote p {
-    width: 55%;
-    margin-right: 40px;
+  width: 55%;
+  margin-right: 40px;
 }
 
 blockquote footer {
-    width: 55%;
-    font-size: 1.1rem;
-    text-align: right;
+  width: 55%;
+  font-size: 1.1rem;
+  text-align: right;
 }
 
 section > p,
 section > footer,
 section > table {
-    width: 55%;
+  width: 55%;
 }
 
 /* 50 + 5 == 55, to be the same width as paragraph */
 section > ol,
 section > ul {
-    width: 50%;
-    -webkit-padding-start: 5%;
+  width: 50%;
+  -webkit-padding-start: 5%;
 }
 
 li:not(:first-child) {
-    margin-top: 0.25rem;
+  margin-top: 0.25rem;
 }
 
 figure {
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    max-width: 55%;
-    -webkit-margin-start: 0;
-    -webkit-margin-end: 0;
-    margin: 0 0 3em 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  max-width: 55%;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  margin: 0 0 3em 0;
 }
 
 figcaption {
-    float: right;
-    clear: right;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 1.1rem;
-    line-height: 1.6;
-    vertical-align: baseline;
-    position: relative;
-    max-width: 40%;
+  float: right;
+  clear: right;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.1rem;
+  line-height: 1.6;
+  vertical-align: baseline;
+  position: relative;
+  max-width: 40%;
 }
 
 figure.fullwidth figcaption {
-    margin-right: 24%;
+  margin-right: 24%;
 }
 
 /* Links: replicate underline that clears descenders */
 a:link,
 a:visited {
-    color: inherit;
+  color: inherit;
 }
 a:hover {
   text-decoration: none;
+}
+
+.quiz-audio {
+  display: none;
+}
+
+.play-pause {
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  cursor: pointer;
+  font-size: 3rem;
+  height: 1em;
+  line-height: 1em;
+  padding: 0;
+  position: relative;
+  width: 1em;
+}
+
+.play-pause svg {
+  height: 1em;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  transition: opacity 0.15s ease-in-out;
+}
+
+.play-pause[data-current-state="pause"] .play-icon,
+.play-pause[data-current-state="play"] .pause-icon {
+  opacity: 1;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 0;
+}
+
+input,
+button {
+  background-color: transparent;
+  border: 2px solid var(--primary-color);
+  border-radius: 0.5em;
+  display: block;
+  font-family: inherit;
+  font-size: 1.5em;
+  padding: 0.25em 0.5em;
+  width: 100%;
+}
+
+.answer-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.answer-button {
+  background-color: var(--primary-color);
+  color: #fff;
+  cursor: padding;
+  padding: 0.5em;
+}
+
+.show-hint {
+  font-size: 1rem;
+  padding: 0.75em 1em;
+  width: auto;
 }
