--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -1,3 +1,28 @@
 html {
   font-family: "Lora", serif;
+  --hatch-color-1: #4986ca;
+  --hatch-color-2: #93c5fd;
+  --hatch-color-3: #6ca8ec;
+}
+
+.text-shadow {
+  text-shadow: 0 0 8px var(--hatch-color-1);
+}
+
+.text-shadow-unlocked:not(:focus, :hover) {
+  text-shadow: 0 0 8px var(--hatch-color-1);
+}
+
+.inner-shadow {
+  box-shadow: inset 0 0 64px var(--hatch-color-2);
+}
+
+.hatch-unlocked {
+  background-color: var(--hatch-color-3);
+}
+
+.hatch-badge {
+  position: absolute;
+  right: 16px;
+  top: 16px;
 }
