--- a/web/src/pages/day/day.module.scss
+++ b/web/src/pages/day/day.module.scss
@@ -5,6 +5,12 @@
 }
 
 @keyframes fade-in {
-  from { opacity: 0; visibility: visible; }
-  to { opacity: 1; visibility: visible; }
+  from {
+    opacity: 0;
+    visibility: visible;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
 }
